parse/uidl/uidl_parser.go
// Code generated from UIDL.g4 by ANTLR 4.13.2. DO NOT EDIT.

package uidl // UIDL
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

import "strings"

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type UIDLParser struct {
	*antlr.BaseParser
}

var UIDLParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func uidlParserInit() {
	staticData := &UIDLParserStaticData
	staticData.LiteralNames = []string{
		"", "'uidl'", "'{'", "'}'", "'('", "')'", "'='", "'['", "']'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "Bool", "DoubleQuotedString", "BackQuotedString",
		"Identifier", "Natural", "Float", "Int", "Semicolon", "Comma", "WhiteSpace",
	}
	staticData.RuleNames = []string{
		"uidl", "version", "commands", "command", "commandSeparator", "commandBody",
		"attributes", "attribute", "value", "listValue", "simpleValue",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// UIDLParserInit initializes any static state used to implement UIDLParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewUIDLParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func UIDLParserInit() {
	staticData := &UIDLParserStaticData
	staticData.once.Do(uidlParserInit)
}

// NewUIDLParser produces a new parser instance for the optional input antlr.TokenStream.
func NewUIDLParser(input antlr.TokenStream) *UIDLParser {
	UIDLParserInit()
	this := new(UIDLParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &UIDLParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "UIDL.g4"

	return this
}

// UIDLParser tokens.
const (
	UIDLParserEOF                = antlr.TokenEOF
	UIDLParserT__0               = 1
	UIDLParserT__1               = 2
	UIDLParserT__2               = 3
	UIDLParserT__3               = 4
	UIDLParserT__4               = 5
	UIDLParserT__5               = 6
	UIDLParserT__6               = 7
	UIDLParserT__7               = 8
	UIDLParserBool               = 9
	UIDLParserDoubleQuotedString = 10
	UIDLParserBackQuotedString   = 11
	UIDLParserIdentifier         = 12
	UIDLParserNatural            = 13
	UIDLParserFloat              = 14
	UIDLParserInt                = 15
	UIDLParserSemicolon          = 16
	UIDLParserComma              = 17
	UIDLParserWhiteSpace         = 18
)

// UIDLParser rules.
const (
	UIDLParserRULE_uidl             = 0
	UIDLParserRULE_version          = 1
	UIDLParserRULE_commands         = 2
	UIDLParserRULE_command          = 3
	UIDLParserRULE_commandSeparator = 4
	UIDLParserRULE_commandBody      = 5
	UIDLParserRULE_attributes       = 6
	UIDLParserRULE_attribute        = 7
	UIDLParserRULE_value            = 8
	UIDLParserRULE_listValue        = 9
	UIDLParserRULE_simpleValue      = 10
)

// IUidlContext is an interface to support dynamic dispatch.
type IUidlContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Version() IVersionContext
	CommandSeparator() ICommandSeparatorContext
	Commands() ICommandsContext
	EOF() antlr.TerminalNode
	AllWhiteSpace() []antlr.TerminalNode
	WhiteSpace(i int) antlr.TerminalNode

	// IsUidlContext differentiates from other interfaces.
	IsUidlContext()
}

type UidlContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyUidlContext() *UidlContext {
	var p = new(UidlContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = UIDLParserRULE_uidl
	return p
}

func InitEmptyUidlContext(p *UidlContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = UIDLParserRULE_uidl
}

func (*UidlContext) IsUidlContext() {}

func NewUidlContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *UidlContext {
	var p = new(UidlContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = UIDLParserRULE_uidl

	return p
}

func (s *UidlContext) GetParser() antlr.Parser { return s.parser }

func (s *UidlContext) Version() IVersionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IVersionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IVersionContext)
}

func (s *UidlContext) CommandSeparator() ICommandSeparatorContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICommandSeparatorContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICommandSeparatorContext)
}

func (s *UidlContext) Commands() ICommandsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICommandsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICommandsContext)
}

func (s *UidlContext) EOF() antlr.TerminalNode {
	return s.GetToken(UIDLParserEOF, 0)
}

func (s *UidlContext) AllWhiteSpace() []antlr.TerminalNode {
	return s.GetTokens(UIDLParserWhiteSpace)
}

func (s *UidlContext) WhiteSpace(i int) antlr.TerminalNode {
	return s.GetToken(UIDLParserWhiteSpace, i)
}

func (s *UidlContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *UidlContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *UIDLParser) Uidl() (localctx IUidlContext) {
	localctx = NewUidlContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, UIDLParserRULE_uidl)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(23)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == UIDLParserWhiteSpace {
		{
			p.SetState(22)
			p.Match(UIDLParserWhiteSpace)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	}
	{
		p.SetState(25)
		p.Version()
	}
	{
		p.SetState(26)
		p.CommandSeparator()
	}
	{
		p.SetState(27)
		p.Commands()
	}
	p.SetState(29)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == UIDLParserWhiteSpace {
		{
			p.SetState(28)
			p.Match(UIDLParserWhiteSpace)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	}
	{
		p.SetState(31)
		p.Match(UIDLParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IVersionContext is an interface to support dynamic dispatch.
type IVersionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	WhiteSpace() antlr.TerminalNode
	Natural() antlr.TerminalNode

	// IsVersionContext differentiates from other interfaces.
	IsVersionContext()
}

type VersionContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyVersionContext() *VersionContext {
	var p = new(VersionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = UIDLParserRULE_version
	return p
}

func InitEmptyVersionContext(p *VersionContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = UIDLParserRULE_version
}

func (*VersionContext) IsVersionContext() {}

func NewVersionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *VersionContext {
	var p = new(VersionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = UIDLParserRULE_version

	return p
}

func (s *VersionContext) GetParser() antlr.Parser { return s.parser }

func (s *VersionContext) WhiteSpace() antlr.TerminalNode {
	return s.GetToken(UIDLParserWhiteSpace, 0)
}

func (s *VersionContext) Natural() antlr.TerminalNode {
	return s.GetToken(UIDLParserNatural, 0)
}

func (s *VersionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *VersionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *UIDLParser) Version() (localctx IVersionContext) {
	localctx = NewVersionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, UIDLParserRULE_version)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(33)
		p.Match(UIDLParserT__0)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(34)
		p.Match(UIDLParserWhiteSpace)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(35)
		p.Match(UIDLParserNatural)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ICommandsContext is an interface to support dynamic dispatch.
type ICommandsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllCommand() []ICommandContext
	Command(i int) ICommandContext
	AllCommandSeparator() []ICommandSeparatorContext
	CommandSeparator(i int) ICommandSeparatorContext

	// IsCommandsContext differentiates from other interfaces.
	IsCommandsContext()
}

type CommandsContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCommandsContext() *CommandsContext {
	var p = new(CommandsContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = UIDLParserRULE_commands
	return p
}

func InitEmptyCommandsContext(p *CommandsContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = UIDLParserRULE_commands
}

func (*CommandsContext) IsCommandsContext() {}

func NewCommandsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CommandsContext {
	var p = new(CommandsContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = UIDLParserRULE_commands

	return p
}

func (s *CommandsContext) GetParser() antlr.Parser { return s.parser }

func (s *CommandsContext) AllCommand() []ICommandContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ICommandContext); ok {
			len++
		}
	}

	tst := make([]ICommandContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ICommandContext); ok {
			tst[i] = t.(ICommandContext)
			i++
		}
	}

	return tst
}

func (s *CommandsContext) Command(i int) ICommandContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICommandContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICommandContext)
}

func (s *CommandsContext) AllCommandSeparator() []ICommandSeparatorContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ICommandSeparatorContext); ok {
			len++
		}
	}

	tst := make([]ICommandSeparatorContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ICommandSeparatorContext); ok {
			tst[i] = t.(ICommandSeparatorContext)
			i++
		}
	}

	return tst
}

func (s *CommandsContext) CommandSeparator(i int) ICommandSeparatorContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICommandSeparatorContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICommandSeparatorContext)
}

func (s *CommandsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CommandsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *UIDLParser) Commands() (localctx ICommandsContext) {
	localctx = NewCommandsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, UIDLParserRULE_commands)
	var _alt int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(37)
		p.Command()
	}
	p.SetState(43)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 2, p.GetParserRuleContext())
	if p.HasError() {
		goto errorExit
	}
	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(38)
				p.CommandSeparator()
			}
			{
				p.SetState(39)
				p.Command()
			}

		}
		p.SetState(45)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 2, p.GetParserRuleContext())
		if p.HasError() {
			goto errorExit
		}
	}
	p.SetState(47)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 3, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(46)
			p.CommandSeparator()
		}

	} else if p.HasError() { // JIM
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ICommandContext is an interface to support dynamic dispatch.
type ICommandContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllIdentifier() []antlr.TerminalNode
	Identifier(i int) antlr.TerminalNode
	AllWhiteSpace() []antlr.TerminalNode
	WhiteSpace(i int) antlr.TerminalNode
	Attributes() IAttributesContext
	CommandBody() ICommandBodyContext

	// IsCommandContext differentiates from other interfaces.
	IsCommandContext()
}

type CommandContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCommandContext() *CommandContext {
	var p = new(CommandContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = UIDLParserRULE_command
	return p
}

func InitEmptyCommandContext(p *CommandContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = UIDLParserRULE_command
}

func (*CommandContext) IsCommandContext() {}

func NewCommandContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CommandContext {
	var p = new(CommandContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = UIDLParserRULE_command

	return p
}

func (s *CommandContext) GetParser() antlr.Parser { return s.parser }

func (s *CommandContext) AllIdentifier() []antlr.TerminalNode {
	return s.GetTokens(UIDLParserIdentifier)
}

func (s *CommandContext) Identifier(i int) antlr.TerminalNode {
	return s.GetToken(UIDLParserIdentifier, i)
}

func (s *CommandContext) AllWhiteSpace() []antlr.TerminalNode {
	return s.GetTokens(UIDLParserWhiteSpace)
}

func (s *CommandContext) WhiteSpace(i int) antlr.TerminalNode {
	return s.GetToken(UIDLParserWhiteSpace, i)
}

func (s *CommandContext) Attributes() IAttributesContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAttributesContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAttributesContext)
}

func (s *CommandContext) CommandBody() ICommandBodyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICommandBodyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICommandBodyContext)
}

func (s *CommandContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CommandContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *UIDLParser) Command() (localctx ICommandContext) {
	localctx = NewCommandContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, UIDLParserRULE_command)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(49)
		p.Match(UIDLParserIdentifier)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(50)
		p.Match(UIDLParserWhiteSpace)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(51)
		p.Match(UIDLParserIdentifier)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(53)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == UIDLParserWhiteSpace {
		{
			p.SetState(52)
			p.Match(UIDLParserWhiteSpace)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	}
	{
		p.SetState(55)
		p.Attributes()
	}
	p.SetState(57)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 5, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(56)
			p.Match(UIDLParserWhiteSpace)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	} else if p.HasError() { // JIM
		goto errorExit
	}
	p.SetState(60)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == UIDLParserT__1 {
		{
			p.SetState(59)
			p.CommandBody()
		}

	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ICommandSeparatorContext is an interface to support dynamic dispatch.
type ICommandSeparatorContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetWs returns the ws token.
	GetWs() antlr.Token

	// SetWs sets the ws token.
	SetWs(antlr.Token)

	// Getter signatures
	Semicolon() antlr.TerminalNode
	WhiteSpace() antlr.TerminalNode

	// IsCommandSeparatorContext differentiates from other interfaces.
	IsCommandSeparatorContext()
}

type CommandSeparatorContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
	ws     antlr.Token
}

func NewEmptyCommandSeparatorContext() *CommandSeparatorContext {
	var p = new(CommandSeparatorContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = UIDLParserRULE_commandSeparator
	return p
}

func InitEmptyCommandSeparatorContext(p *CommandSeparatorContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = UIDLParserRULE_commandSeparator
}

func (*CommandSeparatorContext) IsCommandSeparatorContext() {}

func NewCommandSeparatorContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CommandSeparatorContext {
	var p = new(CommandSeparatorContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = UIDLParserRULE_commandSeparator

	return p
}

func (s *CommandSeparatorContext) GetParser() antlr.Parser { return s.parser }

func (s *CommandSeparatorContext) GetWs() antlr.Token { return s.ws }

func (s *CommandSeparatorContext) SetWs(v antlr.Token) { s.ws = v }

func (s *CommandSeparatorContext) Semicolon() antlr.TerminalNode {
	return s.GetToken(UIDLParserSemicolon, 0)
}

func (s *CommandSeparatorContext) WhiteSpace() antlr.TerminalNode {
	return s.GetToken(UIDLParserWhiteSpace, 0)
}

func (s *CommandSeparatorContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CommandSeparatorContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *UIDLParser) CommandSeparator() (localctx ICommandSeparatorContext) {
	localctx = NewCommandSeparatorContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, UIDLParserRULE_commandSeparator)
	p.SetState(65)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case UIDLParserSemicolon:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(62)
			p.Match(UIDLParserSemicolon)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case UIDLParserWhiteSpace:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(63)

			var _m = p.Match(UIDLParserWhiteSpace)

			localctx.(*CommandSeparatorContext).ws = _m
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		p.SetState(64)

		if !(strings.ContainsRune((func() string {
			if localctx.(*CommandSeparatorContext).GetWs() == nil {
				return ""
			} else {
				return localctx.(*CommandSeparatorContext).GetWs().GetText()
			}
		}()), '\n')) {
			p.SetError(antlr.NewFailedPredicateException(p, "strings.ContainsRune($ws.text, '\\n')", "expected semicolon or new line"))
			goto errorExit
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ICommandBodyContext is an interface to support dynamic dispatch.
type ICommandBodyContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Commands() ICommandsContext
	WhiteSpace() antlr.TerminalNode

	// IsCommandBodyContext differentiates from other interfaces.
	IsCommandBodyContext()
}

type CommandBodyContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCommandBodyContext() *CommandBodyContext {
	var p = new(CommandBodyContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = UIDLParserRULE_commandBody
	return p
}

func InitEmptyCommandBodyContext(p *CommandBodyContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = UIDLParserRULE_commandBody
}

func (*CommandBodyContext) IsCommandBodyContext() {}

func NewCommandBodyContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CommandBodyContext {
	var p = new(CommandBodyContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = UIDLParserRULE_commandBody

	return p
}

func (s *CommandBodyContext) GetParser() antlr.Parser { return s.parser }

func (s *CommandBodyContext) Commands() ICommandsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICommandsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICommandsContext)
}

func (s *CommandBodyContext) WhiteSpace() antlr.TerminalNode {
	return s.GetToken(UIDLParserWhiteSpace, 0)
}

func (s *CommandBodyContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CommandBodyContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *UIDLParser) CommandBody() (localctx ICommandBodyContext) {
	localctx = NewCommandBodyContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, UIDLParserRULE_commandBody)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(67)
		p.Match(UIDLParserT__1)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(69)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == UIDLParserWhiteSpace {
		{
			p.SetState(68)
			p.Match(UIDLParserWhiteSpace)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	}
	{
		p.SetState(71)
		p.Commands()
	}
	{
		p.SetState(72)
		p.Match(UIDLParserT__2)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IAttributesContext is an interface to support dynamic dispatch.
type IAttributesContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	WhiteSpace() antlr.TerminalNode
	AllAttribute() []IAttributeContext
	Attribute(i int) IAttributeContext
	AllComma() []antlr.TerminalNode
	Comma(i int) antlr.TerminalNode

	// IsAttributesContext differentiates from other interfaces.
	IsAttributesContext()
}

type AttributesContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAttributesContext() *AttributesContext {
	var p = new(AttributesContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = UIDLParserRULE_attributes
	return p
}

func InitEmptyAttributesContext(p *AttributesContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = UIDLParserRULE_attributes
}

func (*AttributesContext) IsAttributesContext() {}

func NewAttributesContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AttributesContext {
	var p = new(AttributesContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = UIDLParserRULE_attributes

	return p
}
